[package]
name = "eguichatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"

egui = "0.27.2"
async-openai = "0.23.3"
dotenvy = "0.15.7"
lazy_static = "1.4.0"

env_logger = { version = "0.11.3", default-features = false, features = [
  "auto-color",
  "humantime",
] }
tokio = { version = "1", features = ["full"] }

egui_extras = { version = "0.27.2", features = ["default", "all_loaders"] }
image = { version = "0.25.1", features = ["jpeg", "png"] }
reqwest = { version = "0.12.5", features = ["blocking"] }
native-dialog = "0.7.0"
